--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<a href="https://github.com/Lingggao/Software-Testing-Basics">Software Testing Basics (软件测试基础)</a>
+
+<br /> <br /> 
+
+<a href="https://github.com/Lingggao/Microsoft-Insider-Program">Microsoft Insider Programs (Microsoft 预览体验计划)</a>
+
 </body>
 </html>
