--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="entry-content clearfix">
                         <p>此为我的个人软件测试学习笔记，为了整理与校对这些笔记，我花费了很长时间，毕竟 “追求完美” 是每一位软件测试工程师都应当具备的基本态度。笔记中的图片绝大多数由我本人亲自绘制，我希望这些笔记可以为 “以软件测试工作为职业路径” 的朋友们提供一些学习方面的帮助。</p>
                         <div class="read-more cl-effect-14">
-                            <a href="https://github.com/Lingggao/Software-Testing-Basics" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
+                            <a href="https://github.com/Lingggao/Software-Testing-Basics" class="more-link">详细阅读 <span class="meta-nav">→</span></a>
                         </div>
                     </div>
                 </article>
